# poltty

./: .gitignore  README.md  pyproject.toml
polltty/: __init__.py  config.py  main.py  tui.py
poltty/: __init__.py  applescript.py  config.py  main.py  tui.py
