[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poltty"
version = "0.1.0"
description = "Ghostty terminal layout manager — split panes via AppleScript"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "textual>=8.0",
    "rich>=13.0",
]

[project.scripts]
poltty = "poltty.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["poltty*"]
